--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/postcss": "^4.1.12",
     "gsap": "^3.13.0",
+    "install": "^0.13.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
